--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,26 @@ license = { text = "MIT" }
 requires-python = ">=3.12"
 
 dependencies = [
+    "granian==1.6.1",
+    "django==5.1.2",
+    "psycopg[binary,pool]==3.2.3",
+    "oracledb==2.4.1",
+    "django-storages[s3]==1.14.4",
+    "django-ratelimit==4.1.0",
+    "django-environ==0.11.2",
+    "django-ninja==1.3.0",
+    "redis[hiredis]==5.1.1",
+    "boto3<2.0.0,>=1.35.36",
+    "dramatiq[redis]==1.17.0",
+    "django-dramatiq==0.11.6",
+    "dramatiq-abort==1.2.0",
+    "APScheduler==3.10.4",
+    "django-apscheduler==0.7.0",
+    "pydantic==2.9.2",
+    "whitenoise[brotli]==6.7.0",
+    "mozilla-django-oidc==4.0.1",
+    "requests==2.32.2",
+    "pandas[pyarrow]==2.2.3",
     "openpyxl==3.1.5",
     "django-filter==24.3",
     "django-crispy-forms==2.3",
@@ -38,6 +58,7 @@ dependencies = [
     "django-pydantic-field==0.3.10",
     "httpx>=0.27.2",
 ]
+
 
 [dependency-groups]
 lint = [
@@ -64,6 +85,7 @@ dev = [
     "django-debug-toolbar==4.4.6",
     "django-browser-reload==1.16.0",
     "django-silk==5.2.0",
+    "-e hero-tools @ {root:uri}/hero-tools",
     "setuptools-scm==8.1.0",
     "pre-commit>=4.0.1",
     { include-group = "lint" },
