--- a/pyproject.toml
+++ b/pyproject.toml
@@ -59,6 +59,21 @@ dependencies = [
     "httpx>=0.27.2",
 ]
 
+[dependency-groups]
+lint = [
+    "ruff==0.7.1",
+    "djhtml==3.0.7"
+]
+dev = [
+    "django-debug-toolbar==4.4.6",
+    "django-browser-reload==1.16.0",
+    "django-silk==5.2.0",
+    "-e hero-tools @ {root:uri}/hero-tools",
+    "setuptools-scm==8.1.0",
+    "pre-commit>=4.0.1",
+    { include-group = "lint" },
+    { include-group = "test" },
+]
 
 [tool.ruff.lint]
 select = ["F", "E", "W", "Q", "I001"]
