--- a/pyproject.toml
+++ b/pyproject.toml
@@ -65,12 +65,14 @@ lint = [
     "djhtml==3.0.7"
 ]
 test = [
-    "model-bakery==1.20.0",
-    "playwright==1.47.0",
-    "pytest==8.3.3",
-    "pytest-asyncio==0.24.0",
-    "pytest-base-url==2.1.0",
-    "pytest-django==4.9.0",
+    "pytest-playwright==0.5.2",
+    "pytest-recording==0.13.2",
+    "pytest-rerunfailures==14.0",
+    "pytest-cov==6.0.0",
+    "vcrpy==6.0.2",
+    "openapi-spec-validator==0.7.1",
+    "coverage==7.6.3",
+    "pytest-env==1.1.5"
 ]
 dev = [
     "django-debug-toolbar==4.4.6",
