--- a/pyproject.toml
+++ b/pyproject.toml
@@ -65,15 +65,21 @@ lint = [
     "ruff==0.7.1",
     "djhtml==3.0.7"
 ]
-dev = [
-    "django-debug-toolbar==4.4.6",
-    "django-browser-reload==1.16.0",
-    "django-silk==5.2.0",
-    "-e hero-tools @ {root:uri}/hero-tools",
-    "setuptools-scm==8.1.0",
-    "pre-commit>=4.0.1",
-    { include-group = "lint" },
-    { include-group = "test" },
+test = [
+    "model-bakery==1.20.0",
+    "playwright==1.47.0",
+    "pytest==8.3.3",
+    "pytest-asyncio==0.24.0",
+    "pytest-base-url==2.1.0",
+    "pytest-django==4.9.0",
+    "pytest-playwright==0.5.2",
+    "pytest-recording==0.13.2",
+    "pytest-rerunfailures==14.0",
+    "pytest-cov==6.0.0",
+    "vcrpy==6.0.2",
+    "openapi-spec-validator==0.7.1",
+    "coverage==7.6.3",
+    "pytest-env==1.1.5"
 ]
 
 [tool.ruff.lint]
