--- a/requirements.txt
+++ b/requirements.txt
@@ -9,4 +9,6 @@ python-dotenv==1.0.1
 fontawesomefree==6.5.1
 django-htmx==1.19.0
 django-crispy-forms==2.3
+mkdocs-material==9.5.47
+mkdocs-material-extensions==1.3.1
 django-ninja==1.3.0
