debug docs workflow 1'

--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -47,6 +47,8 @@ jobs:
       - name: Build
         run: mkdocs build
 
+      - run: ls -la
+
       - name: Upload Docs
         uses: actions/upload-pages-artifact@v3
         with:
