--- a/requirements.txt
+++ b/requirements.txt
@@ -12,3 +12,4 @@ django-crispy-forms==2.3
 mkdocs-material==9.5.47
 mkdocs-material-extensions==1.3.1
 django-ninja==1.3.0
+django-allauth[socialaccount]==65.3.0
