--- a/requirements.txt
+++ b/requirements.txt
@@ -13,3 +13,5 @@ mkdocs-material==9.5.47
 mkdocs-material-extensions==1.3.1
 django-ninja==1.3.0
 django-allauth[socialaccount]==65.3.0
+pytest==8.3.4
+pytest-django==4.9.0
