--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,5 +25,5 @@ jobs:
       - name: Merge main into deploy
         run: |
           git checkout deploy
-          git merge origin/main --no-ff -m "Merge main into deploy following release ${{ github.event.release.tag_name }}"
+          git merge origin/main --ff-only -m "Merge main into deploy following release ${{ github.event.release.tag_name }}"
           git push origin deploy --follow-tags
