--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -7,6 +7,7 @@ permissions:
 on:
   release:
     types: [published]
+  workflow_dispatch:
 
 jobs:
   merge-main-into-deploy:
@@ -22,8 +23,12 @@ jobs:
           git config --local user.email "action@github.com"
           git config --local user.name "GitHub Action [bot]"
 
+      - name: display github object info
+        run: |
+            echo "github: ${{ toJson(github) }}"
+
       - name: Merge main into deploy
         run: |
-          git checkout deploy
+          git switch origin/deploy
           git merge origin/main --ff-only -m "Merge main into deploy following release ${{ github.event.release.tag_name }}"
           git push origin deploy --follow-tags
