--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,6 +29,6 @@ jobs:
 
       - name: Merge main into deploy
         run: |
-          git switch origin/deploy
+          git switch deploy
           git merge origin/main --ff-only -m "Merge main into deploy following release ${{ github.event.release.tag_name }}"
           git push origin deploy --follow-tags
