--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -57,7 +57,7 @@ jobs:
       - name: Upload Docs
         uses: actions/upload-pages-artifact@v3
         with:
-          path: '${{ env.DOCS_DIRECTORY }}/site'
+          path: '/site'
 
   deploy_pages:
     name: Deploy Documentation
