--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -46,7 +46,7 @@ jobs:
       - name: Upload Docs
         uses: actions/upload-pages-artifact@v3
         with:
-          path: '/site'
+          path: './site'
 
   deploy_pages:
     name: Deploy Documentation
