--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -8,5 +8,7 @@ plugins:
   - search:
 theme:
   name: material
+  # https://squidfunk.github.io/mkdocs-material/customization/
+  custom_dir: docs/overrides
 extra_javascript:
     - javascript/readthedocs.js
